[package]
name = "vet"
version = "0.1.0"
authors = ["Benjamin Herman <benjamin@metanomial.com>"]
edition = "2021"
description = "Arbitrary type validation"
repository = "https://github.com/metanomial/vet"
license = "MIT OR Apache-2.0"
keywords = ["validation"]
categories = ["rust-patterns", "no-std"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
